@@ -3,6 +3,7 @@
 ## Version 5.5.0
 
 * Adding decoder option for NVEncC and QSVEncC
+* Adding #326 Support for hwaccel decoding with ffmpeg nvenc (thanks to Jim Leonard)
 * Adding #329 Hardware VAAPI encoding support for HEVC and H264
 * Adding #351 option to disable automatic tab switching (thanks to Wontell)
 * Adding #357 QSVencC adapt-ref, adapt-ltr, and adapt-qm parameters (thanks to F.O.R.A.R.T.)
